# sama-downloader

backend/: config.py  pyproject.toml  run.py
backend/src/: app.py
backend/src/controller/: download.py  downloads.py  episodes.py  index.py  search.py
backend/src/model/: task.py
backend/src/service/: downloader.py
backend/src/service/scraper/: anime_scraper.py  catalogue.py  season.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: Home.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx
frontend/src/components/search/: CatalogueComponent.tsx  CatalogueList.tsx  SearchBar.tsx
frontend/src/models/: catalogue.ts
